style.css
/* ... */
.arrow {
  top: 100%;
  padding: 0.5rem;
  aspect-ratio: 1;
  border-radius: 100vw;
  background-color: var(--colour-green-light);
  position: absolute;
  width: 40px;
}

.rotate {
  rotate: 180deg;
}

.bounce {
  animation: bounce 0.5s infinite alternate;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-10px);
  }
}

.hidden {
  display: none;
}

.welcome_section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.welcome_background {
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  z-index: -1;
  --s: 100px;
  --c1: #e1f5c4;
  --c2: #3b8183;

  --_g: #0000, #0004 5%, var(--c2) 6% 14%, var(--c1) 16% 24%, var(--c2) 26% 34%,
    var(--c1) 36% 44%, var(--c2) 46% 54%, var(--c1) 56% 64%, var(--c2) 66% 74%,
    var(--c1) 76% 84%, var(--c2) 86% 94%, #0004 95%, #0000;
  background: radial-gradient(100% 50% at 100% 0, var(--_g)),
    radial-gradient(100% 50% at 0 50%, var(--_g)),
    radial-gradient(100% 50% at 100% 100%, var(--_g));
  background-size: var(--s) calc(2 * var(--s));
}

/* ------- Artists section -------- */

.artists_section {
  background-color: #e4c1f9;
  position: relative;
  --cover-size: clamp(200px, min(40vw, 40vh), 50vw);
  display: grid;
  position: relative;
  height: max-content;
}

.artists_section_title {
  position: absolute;
  top: 6rem;
  left: 50%;
  transform: translateX(-50%);
  font-size: 1.5rem;
  padding: 0.5rem 0.7rem;
  background-color: white;
  border-radius: 1rem;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  text-align: center;
  margin-inline: auto;
}

.scroller_wrapper {
  position: sticky;
  top: 0;
  margin: 0 auto;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.cards {
  box-sizing: border-box;
  white-space: nowrap;
  width: 100vw;
  font-size: 0;
  line-height: 1.6rem;
}

.cards div {
  will-change: transform, opacity;
  width: var(--cover-size);
  height: var(--cover-size);
}

.cards li {
  perspective: 40vw;
  position: relative;
  z-index: 1;
  top: 50%;
  user-select: none;
  display: inline-block;
  height: calc(var(--cover-size) + (1.6rem * 2) + 1rem);
  margin-bottom: calc(var(--cover-size) / 3);
}

.cards li:first-of-type {
  margin-left: calc(
    (100vw - (var(--cover-size) * 3)) / 2 + (var(--cover-size) * 2)
  );
}

.cards img {
  width: 100%;
  height: auto;
  -webkit-box-reflect: below 1rem
    linear-gradient(rgb(0 0 0 / 0), rgb(0 0 0 / 0.2));
}

.cards p {
  text-align: center;
  margin-top: 1rem;
  font-size: 1.5rem;
  display: flex;
  justify-content: center;
  margin: 0;
}

.cards p:last-of-type {
  margin-bottom: 1rem;
}

/* ------- Tracks section -------- */

.tracks_section {
  background-color: #e4c1f9;
  height: unset;
}

.tracks_wrapper {
  display: flex;
  position: relative;
  gap: 1rem;
}

.tracks_left_wrapper {
  top: 0;
  width: 40vw;
  position: sticky;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: end;
}

.tracks_left_wrapper div {
  font-size: 1.5rem;
  padding: 0.5rem 0.7rem;
  background-color: white;
  border-radius: 1rem;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  text-align: center;
}

.tracks_right_wrapper {
  --track-content-height: 128px;
  padding-left: 1rem;
  flex-grow: 1;
}

.track_panel_wrapper {
  height: 80vh;
  position: relative;
}

.track_panel_wrapper:first-of-type {
  padding-top: 50vh;
  height: 50vh;
}

.track_panel_wrapper:last-of-type {
  height: 60vh;
  padding-bottom: calc(50vh - var(--track-content-height));
}

.track_panel_content {
  display: flex;
  align-items: center;
  gap: 1rem;
  position: sticky;
  top: 50%;
  transform: translate(0, -50%);
}

.index_par {
  font-size: 2rem;
  width: 2ch;
}

.track_name_label {
  font-size: 1.3em;
}

.track_artist_label {
  font-style: italic;
}

.track_image_wrapper {
  height: var(--track-content-height);
  aspect-ratio: 1;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.track_image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.track_buttons_wrapper {
  display: flex;
  gap: 1rem;
  padding-block: 0.5rem;
}

.play_icon {
  width: 2rem;
  cursor: pointer;
  transition-property: all;
  transition-duration: 0.2s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.animate-spin {
  animation: spin 2s ease-in-out infinite;
}

.spotify_icon {
  width: 2rem;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* ------- Listening section -------- */

.listening_section {
  background-color: #9f6fe2;
  height: max-content;
}

.listening_intro {
  height: 50vh;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.listening_intro p {
  margin-top: 1rem;
  text-align: center;
}

.listening_intro svg {
  top: 200%;
}

.chart_container_wrapper {
  height: 200vh;
  position: relative;
}

.chart_wrapper {
  position: sticky;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: #9f6fe2;
  /* padding-top: 6rem; */
}

.chart_title {
  position: absolute;
  top: 6rem;
  font-size: 1.5rem;
  padding: 0.5rem 0.7rem;
  background-color: white;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  border-radius: 1rem;
}

.chart_content_wrapper {
  border-radius: 0.5rem;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  padding: 1rem;
  margin-bottom: 1rem;
  width: 75%;
}

.chart_content_wrapper > div {
  position: absolute;
  opacity: 0;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #ccc;
  display: flex;
  gap: 1rem;
  width: max-content;
}

.chart_content_wrapper > div > div:first-of-type {
  display: flex;
  align-items: center;
}
/* ... */

